change DB Url to variable

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=join_backend
 
 frontend.url=${FRONTEND_URL}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/joinDB
+spring.datasource.url=jdbc:${DB_URL}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.username=${DB_USERNAME}
